client/style.css
* {
    font-family: 'Roboto', sans-serif;
}

body {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 98vh;
}

.form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.input-cell {
    position: relative;
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
    height: 54px;
}

.form__label {
    font-size: 16px;
    color: #c3c3c3;
    
    transform: translateY(27px);
    font-size: 16px;
    transition: transform .3s;
    transform-origin: 0 50%;
}

.form__input {
    width: 400px;
    font-size: 16px;
    padding: 8px 0;
    outline: none;
    border: none;
    background-color: transparent;
    cursor: text;

    z-index: 10;

}

.input-cell::after, .input-cell::before {
    content: "";
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    height: 2px;
    width: 100%;
    background-color: #c3c3c3;
}

.input-cell::after {
    transform: scaleX(0);
    transition: transform .3s;
}

.is-focused .form__label {
    color: #6a2c70;
}

.has-label .form__label {
    transform: translateY(0) scale(.75);
}

.is-focused::after {
    transform: scaleX(1);
    background-color: #6a2c70;
}

.form__button {
    width: 100%;
    padding: 9px 16px;
    font-size: 16px;
    border: none;
    outline: none;
    background-color: #6a2c70;
    color: white;
    cursor: pointer;
    font-family: 'Libre Franklin';
    text-transform: uppercase;
    position: relative;
    overflow: hidden;
    border-radius: 4px;
    display: flex;
    justify-content: center;
    gap: 8px;
    align-items: center;
}

.form__button .ripple {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    position: absolute;
    background-color: white;
    opacity: .5;
    transform: translate(-50%, -50%) scale(0);
    animation: ripple .3s ease-in; 
}

@keyframes ripple{
    to {
        opacity: 0;
        transform: translate(-50%, -50%) scale(2.5);
    }
}

@media screen and (max-width: 768px) {
    .form__input {
        width: 300px;
    }
    body {
        height: 95vh;
        overflow: hidden;
    }
}

